back/auth-service/rocket-auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rocket-auth-service
spec:
  type: ClusterIP
  selector:
    app: rocket-auth-service
  ports:
    - protocol: TCP
      port: 8080  # Порт сервиса
      targetPort: 8080  # Порт контейнера
