back/auth-service/rocket-auth-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rocket-auth-vs
spec:
  hosts:
    - "rocket-auth-service.default.svc.cluster.local"
  gateways:
    - rocket-gateway
  http:
    - route:
        - destination:
            host: rocket-auth-service.default.svc.cluster.local
            port:
              number: 8080
